--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ header{
     padding-left:20px;
     padding-top:7px;
     padding-bottom:7px;
-    height:100px;
+    height:150px;
 }
 h1,h2,h3,h4,a{
     font-family: 'Open Sans', sans-serif;
@@ -40,27 +40,47 @@ h1{
     float:right;
     margin:0px;
     padding:0px;
-    text-align: center;
+    
     margin-top:10px;
 }
+
 #navigation-burger{
     font-size: 40px;
     padding:0px;
     margin:0px;
 }
-
+.dropdown-content{
+    display:none;
+    position:relative;
+    right:100px;
+}
+.navlink {
+    text-align: center;
+    list-style-type: none;
+    font-size:20px;
+    width:110px;
+    height:30px;   
+    padding: 5px;
+    border:1px solid black
+}
+.nav-anchor{
+    text-decoration: none;
+    color:inherit;
+    font-family: inherit;
+}
 .hero{
     text-align: center;
     display:block;
     width:70%;
     height:200px;
-    margin-top:100px;
+    margin-top:150px;
     margin-bottom:50px;
     padding-top:20px;
     padding-bottom:20px;
     margin-left:auto;
     margin-right:auto;
     overflow: auto;
+    border-bottom:1px rgb(100,100,200) solid;
 }
 h1{
     display:block;
@@ -79,7 +99,7 @@ main{
 }
 
 .portfolio{
-    background: linear-gradient(to bottom,white,rgba(0,0,200,0.3),white);
+    /*background: linear-gradient(to bottom,white,rgba(0,0,200,0.3),white);*/
     margin-left:auto;
     margin-right:auto;
     width:100%;
@@ -98,6 +118,7 @@ main{
     overflow: auto;
 }
 .about-me{
+    border-top:1px rgb(100,100,200) solid;
     margin-left:auto;
     margin-right:auto;
     width:70%;
@@ -113,7 +134,6 @@ footer{
     background:linear-gradient(to bottom,white,#0000FF);
     height:200px;
     width:100%;
-    background-color:grey;
     margin:0;
     padding: 1% 0;
     display:flex;
