--- a/main.css
+++ b/main.css
@@ -75,6 +75,12 @@ h1{
     overflow: auto;
     border-bottom:1px rgb(100,100,200) solid;
 }
+.project-picture{
+    width:300px;
+    height:300px;
+    border:1px rgb(100,100,200) solid;
+    border-radius:25px;
+}
 h1{
     display:block;
     margin-left:auto;
@@ -96,7 +102,7 @@ main{
     margin-left:auto;
     margin-right:auto;
     width:100%;
-    height:1100px;
+    height:2200px;
     display:flex;
     flex-direction:column;
     justify-content: space-evenly;
@@ -120,8 +126,7 @@ main{
     height:400px;
     color:black;
     padding:5%;
-    overflow: auto;
-    
+    overflow: auto; 
 }
 
 footer{
