--- a/main.css
+++ b/main.css
@@ -109,6 +109,15 @@ main{
     align-items: center;
     margin-bottom:50px;
 }
+.project-outer{
+    margin:0;
+    padding:0;
+    display:flex;
+    flex-direction:column;
+    justify-content: space-around;
+    align-items: center;
+    height:650px;
+}
 .project{
     height:300px;
     width:300px;
@@ -116,6 +125,7 @@ main{
     padding:10px;
     overflow: auto;
 }
+
 .about-me{
     border-top:1px rgb(100,100,200) solid;
     margin-left:auto;
