--- a/main.css
+++ b/main.css
@@ -2,9 +2,9 @@
     box-sizing:border-box;
 }
 header{
-    background:linear-gradient(to top,white,#0000FF);
+    background-color: rgba(100,100,220,1);
     position:fixed;
-    color:rgb(100,100,100);
+    color:black;
     display:block;
     width:100%;
     padding-right: 20px;
@@ -24,9 +24,7 @@ p, li{
     font-family: 'Gentium Basic', serif;
 
 }
-h1{
-    text-align: center;
-}
+
 .head{
     display:inline-block;
     height:40px;
@@ -36,7 +34,6 @@ h1{
 }
 .logo{
     background-color:black;
-    border:3px solid green;
     color:white;
 }
 .topnav{
@@ -81,15 +78,16 @@ h1{
 }
 .project-picture{
     width:300px;
-    height:300px;
+    height:350px;
     border:1px rgb(100,100,200) solid;
     border-radius:25px;
 }
 h1{
+    text-align: center;
     display:block;
     margin-left:auto;
     margin-right:auto;
-    margin:0px;
+    margin-top:30px;
     padding:0px;
 }
 main{
@@ -106,7 +104,7 @@ main{
     margin-left:auto;
     margin-right:auto;
     width:100%;
-    height:2200px;
+    height:2500px;
     display:flex;
     flex-direction:column;
     justify-content: space-evenly;
@@ -120,12 +118,11 @@ main{
     flex-direction:column;
     justify-content: space-around;
     align-items: center;
-    height:650px;
+
 }
+
 .project{
-    height:300px;
     width:300px;
-    border:1px red solid;
     padding:10px;
     overflow: auto;
 }
@@ -137,14 +134,13 @@ main{
     width:70%;
     margin-bottom:50px;
     background-color:white;
-    height:400px;
     color:black;
     padding:5%;
     overflow: auto; 
 }
 
 footer{
-    background:linear-gradient(to bottom,white,#0000FF);
+    background-color: rgba(100,100,220,1);
     height:200px;
     width:100%;
     margin:0;
